reasoning_transformations/CRUXEval/Transformations/logs/sample_53.log
STARTING AT 2024-10-19 22:43:20.300543
[START] processing file: sample_53
*Running tests for: sample_53
 
Result: ['tests_pass']
tests_pass sample_53 /home/yang/Benchmark/dataset/cruxeval/code//sample_53.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_53
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_53", line 8
    nonlocal name
    ^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'name' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_53", line 8\n    nonlocal name\n    ^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'name\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_53
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_53
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_53.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_53.py
*Running tests for: sample_53
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_53.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_53',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   '    occ = {}\n'
                   '    for ch in text:\n'
                   "        name = {'a': 'b', 'b': 'c', 'c': 'd', 'd': 'e', "
                   "'e': 'f'}\n"
                   '        name = name.get(ch, ch)\n'
                   '        occ[name] = occ.get(name, 0) + 1\n'
                   '    return [x for (_, x) in occ.items()]',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_53.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_53.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_53.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.403103,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([12, 20, 20], [51, 50, 90])\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc0_19(variable_3_19, occ, name, '
                      'variable_6_19):\n'
                      "    base64.b64encode(b'97003594779173853383')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      "    parse('2024-10-19 22:43:25')\n"
                      '    return occ.get(name, variable_6_19) + '
                      'variable_3_19\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      '    datetime.datetime.now()\n'
                      '    Fernet.generate_key()\n'
                      '    time.sleep(0.21)\n'
                      '    shuffle([38, 13, 34])\n'
                      '    try:\n'
                      '        occ = {}\n'
                      '        LoopChecker13 = [414][0]\n'
                      '        LoopChecker23 = 413\n'
                      '        for LoopIndexOut in range(LoopChecker13 // '
                      'LoopChecker23):\n'
                      '            for ch in text:\n'
                      "                name = {'a': 'b', 'b': 'c', 'c': 'd', "
                      "'d': 'e', 'e': 'f'}\n"
                      '                name = name.get(ch, ch)\n'
                      '                variable_3_19 = 1\n'
                      '                variable_6_19 = 0\n'
                      '                occ[name] = newFunc0_19(variable_3_19, '
                      'occ, name, variable_6_19)\n'
                      '        else:\n'
                      '            pass\n'
                      '        return [x for (new__1, x) in occ.items()]\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_53. Total Time: 6.403103
END AT 2024-10-19 22:43:26.706117
